# progy-courses

./: RUNNERS.md
better-auth/: SETUP.md  course.json
better-auth/content/01_setup/test/: README.md
better-auth/content/exercises/: auth.test.ts
better-auth/runner/: index.ts
cloudflare/: SETUP.md  course.json
cloudflare/content/01_worker/hello/: README.md
cloudflare/runner/: index.ts  package.json
cpp/: SETUP.md  course.json
cpp/runner/: index.js  package.json
golang/: SETUP.md  course.json  go.mod
golang/runner/: main.go
javascript/: course.json
rust/: Cargo.toml  SETUP.md  course.json
rust/content/01_intro/intro/: Cargo.toml  README.md  exercise.rs
rust/content/01_variables_types/: info.toml
rust/content/01_variables_types/01_mutability/: Cargo.toml  README.md  exercise.rs  main.rs  quiz.json
rust/content/01_variables_types/02_scalar_types/: Cargo.toml  README.md  exercise.rs  main.rs  quiz.json
rust/content/01_variables_types/quiz/: quiz.json
rust/content/02_control_flow/: info.toml
rust/content/02_control_flow/01_if_else/: Cargo.toml  README.md  exercise.rs  main.rs  quiz.json
rust/content/02_control_flow/02_loops/: Cargo.toml  README.md  exercise.rs  main.rs  quiz.json
rust/content/02_control_flow/quiz/: quiz.json
rust/content/03_ownership/: info.toml
rust/content/03_ownership/01_move/: Cargo.toml  README.md  exercise.rs  main.rs  quiz.json
rust/content/03_ownership/02_borrowing/: Cargo.toml  README.md  exercise.rs  main.rs  quiz.json
rust/content/03_ownership/quiz/: quiz.json
rust/runner/: main.ts
(+4 files in other folders)
